add: student repository and implement