@@ -1,7 +1,6 @@
 package mvc.service;
 
 
-
 import mvc.mapper.StudentMapper;
 import mvc.model.dto.StudentCreateDto;
 import mvc.model.dto.StudentResponseDto;
@@ -9,6 +8,7 @@ import mvc.model.dto.StudentUpdateDto;
 import mvc.model.entities.Student;
 import mvc.model.reposiitory.StudentRepository;
 
+import java.util.Collections;
 import java.util.List;
 
 public class StudentServiceImpl
@@ -30,29 +30,46 @@ public class StudentServiceImpl
 
     @Override
     public String deleteStudentByUuid(String uuid) {
-        return "";
+        Student student = studentRepository.findAll().stream()
+                .filter(s->s.getUuid().equals(uuid))
+                .findFirst().get();
+        return String.valueOf(studentRepository.delete(student));
     }
 
     @Override
     public StudentResponseDto updateStudentByUuid(String uuid, StudentUpdateDto studentUpdateDto) {
+        Student student = studentRepository.findAll().stream()
+                .filter(s->s.getUuid().equals(uuid))
+                .findFirst().get();
+        student.setProfile(studentUpdateDto.profile());
+        student.setUserName(studentUpdateDto.userName());
+        student.setEmail(studentUpdateDto.email());
+        student.setBirthOfDate(studentUpdateDto.birdOfDate());
+        studentRepository.update(student);
         return null;
     }
 
     @Override
     public StudentResponseDto searchByUuid(String uuid) {
-        return null;
+        Student student = studentRepository.findAll().stream()
+                .filter(s->s.getUuid().equals(uuid)).findFirst().get();
+        return studentMapper.mapFromStudentToStudentResponseDto(
+                studentRepository.findById(student.getId())
+        );
     }
 
     @Override
     public List<StudentResponseDto> searchStudentByName(String name) {
-        return List.of();
+        Student student = (Student) studentRepository.findAll().stream()
+                .filter(s-> s.getUserName().equals(name));
+        return Collections.singletonList(studentMapper.mapFromStudentToStudentResponseDto(
+                studentRepository.findByUserName(student.getUserName())
+        ));
     }
 
     @Override
     public List<StudentResponseDto> getAllStudents() {
-        return studentRepository.findAll()
-                .stream()
-                .map(studentMapper::mapFromStudentToStudentResponseDto)
-                .toList();
+        return studentRepository.findAll().stream()
+                .map(studentMapper::mapFromStudentToStudentResponseDto).toList();
     }
 }
